* 2013-11-22 - thorben.betten@open-xchange.com

 - Fix for bug 29854: orderly signal OAuth provider error to client

* 2013-11-22- tobias.friedrich@open-xchange.com

 - Fix for bug 29904: Validate numerical identifiers for infostore file metadata 

* 2013-11-21 - thorben.betten@open-xchange.com

 - Fix for bug 29816: Handle possible 'javax.net.ssl.SSLHandshakeException' that indicates SMTP cannot be accessed with a secure connection.
                      Return an appropriate error message to the user and beg him to change SMTP configuration accordingly.
 - Fix for bug 29071: Properly query preview/resource cache when accessing published images

* 2013-11-21 - marcus.klein@open-xchange.com

 - Fix for bug 26354: Use storage methods that to not rely on cached user attributes causing wrong attributes to be saved.

* 2013-11-19 - tobias.friedrich@open-xchange.com

 - Fix for bug 29855: Order EDIT-actions based on new directory version 

* 2013-11-19 - marc.arens@open-xchange.com

 - Fix for bug 29851: Keep Stanza to send proper client acks before recasting for local/remote delivery
 
* 2013-11-19 - thorben.betten@open-xchange.com

 - Fix for bug 29438: Deal with changing User-Agent identifier when Apple Media Player jumps in
 - Fix for bug 29887: Check service availability prior to using it

* 2013-11-18 - tobias.friedrich@open-xchange.com

 - Fix for bug 29391: Extend the size of the 'name' column in the 'infostoreReservedPaths' table 
 - Fix for bug 29866: Don't carry over empty last-modification timestamp if appointment was not updated 

* 2013-11-15 - marc.arens@open-xchange.com

 - Fix for bug 29794: Prevent concurrent cleanup via mutual exclusion
 - Fix for bug 29795: Prevent concurrent cleanup via mutual exclusion
 
* 2013-11-14 - thorben.betten@open-xchange.com

 - Fix for bug 29824: Don't re-distribute already remotely received events

* 2013-11-14 - tobias.friedrich@open-xchange.com
